--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -22,6 +22,7 @@ html, body {
     position: relative;
     overflow: hidden;
     padding-bottom: 3%;
+	text-align: center;
 }
 
 .large_buttonLink {
